objects/EOMDate__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Defines the relationship between ship date and the date of End of Maintenance</description>
    <fields>
        <fullName>EOMDate__c</fullName>
        <label>EOM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipDate__c</fullName>
        <label>Ship Date (Prior to)</label>
        <type>Date</type>
    </fields>
    <label>EOM Date</label>
</CustomObject>